--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1218,6 +1218,16 @@ p {
     object-fit: cover;
 }
 
+/* Ensure iframe fills responsive container like video */
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
 @media (max-width: 480px) {
     .container {
         padding: 0 15px;
